fixed contact not wrappig issue

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -155,7 +155,6 @@
         font-size: 1.5em;
         overflow: hidden;
         padding: 10px 0 10px 0;
-        white-space: nowrap;
     }
 
     &-contact a {
